# rag

./: .gitignore  LICENSE  README.md  agent.py  app.py  chunking.py  chunking_demo.py  embedding_demo.py  ingest.py  model_provider.py  pyproject.toml  rag.py  rerank.py  retrieval_demo.py  vector_store_provider.py
samples/acme/: README.md  eval_set.jsonl
samples/acme/data/: faq_customers.md  hr_code_of_conduct.md  hr_leave_policy.md  product_r200_spec.md  product_x9_spec.md  runbook_deploy.md
samples/acme/prompts/: system.md
